gitops/manifests/springboot/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: springboot

spec:
  replicas: 2

  selector:
    matchLabels:
      app: springboot

  template:
    metadata:
      labels:
        app: springboot

    spec:
      containers:
        - name: springboot

          #image: 905418195910.dkr.ecr.us-east-1.amazonaws.com/platform-demo:1.0.0
          image: "${local.account_id}.dkr.ecr.${local.region}.amazonaws.com/platform-demo:1.0.0"

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"
