gitops/manifests/springboot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    external-dns.alpha.kubernetes.io/hostname: springboot.floci.bright.zorbos.com

    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:136863648867:certificate/b301e760-5bdb-4261-9b6f-b51d87c8b1a9

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'

    alb.ingress.kubernetes.io/ssl-redirect: "443"

spec:
  ingressClassName: alb

  rules:
    - host: springboot.floci.bright.zorbos.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: springboot
                port:
                  number: 80
